# llm-subs

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
tests/: helpers.py  test_adapter_errors.py  test_analysis.py  test_api_adapters.py  test_batch.py  test_checkpoint.py  test_cli_adapters.py  test_cli_surface.py  test_commands.py  test_complex_ass.py  test_encoding.py  test_linguistic_regression.py  test_memory.py  test_output_manifest.py  test_phase6.py  test_readability.py  test_review.py  test_robustness.py  test_round_trip.py  test_source_resolver.py  test_stale_context.py
translate_subs/: __init__.py  cli.py  config.py  diagnostics.py  fsutil.py  naming.py  pipeline.py  settings.py
translate_subs/ai/: analysis.py  api_adapters.py  checkpoint.py  claude_cli.py  cli_adapters.py  provider.py
translate_subs/commands/: project.py  quality.py  system.py  translation.py
translate_subs/io/: source_resolver.py
translate_subs/memory/: compact.py  merge.py  models.py  rules.py  store.py
translate_subs/readability/: compactor.py  metrics.py  report.py
translate_subs/review/: checks.py  report.py  reviewer.py  structure.py
translate_subs/subs/: document.py  extractor.py  reinserter.py  validator.py
translate_subs/workflows/: memory.py  models.py  output_manifest.py  quality.py  seams.py  support.py  translation.py
