[project]
name = "llm-subs"
version = "0.8.0"
description = "Contextual subtitle translator (any language to any language) that preserves timing and ASS structure, driven by LLM agent CLIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
license-files = ["LICENSE"]
authors = [{ name = "Claudio Lepín Mena", email = "azratul@gmail.com" }]
keywords = ["subtitles", "translation", "anime", "ass", "srt", "llm", "ffmpeg"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "Environment :: Console",
]
dependencies = [
    # Floors track the versions the suite is actually run against. typer < 0.15.4 breaks with
    # Click >= 8.2 (e.g. `--help` raises on a clean install with Click 8.4.x); 0.15.4 is the first
    # release that works against it. The pysubs2 floor stays at the tested line.
    # Upper caps fence off the next major, which may change APIs we call (notably pydantic 2->3):
    # a breaking major should be adopted deliberately with a test run, not resolved in silently.
    "pysubs2>=1.8,<2",
    "typer>=0.15.4,<1",
    # pydantic-core wheels for CPython 3.14 only exist from pydantic 2.12, and the older core
    # doesn't build against 3.14 either — so the floor is per-Python, or the declared minimum
    # would be uninstallable on part of the supported matrix.
    "pydantic>=2.7,<3; python_version < '3.14'",
    "pydantic>=2.12,<3; python_version >= '3.14'",
    "rich>=13.7,<16",
    # Statistical text-encoding detection for input subtitles. A strict decode ladder can't
    # disambiguate legacy single/multi-byte encodings (bytes valid as both CP1252 and Shift-JIS),
    # so we defer to charset-normalizer (pure Python, no build step) after the BOM/UTF-8 fast paths.
    "charset-normalizer>=3,<4",
]

[project.optional-dependencies]
# Only needed for `--provider litellm`; Ollama uses the stdlib HTTP client. Capped below the
# next major like every other dependency: a breaking SDK major should be adopted deliberately.
litellm = ["litellm>=1.40,<2"]

[project.urls]
Homepage = "https://github.com/azratul/llm-subs"
Repository = "https://github.com/azratul/llm-subs"
Issues = "https://github.com/azratul/llm-subs/issues"

[project.scripts]
llm-subs = "translate_subs.cli:app"
translate-subs = "translate_subs.cli:app" # backwards-compatible command alias

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.10", "hypothesis>=6.100"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["translate_subs"]

[tool.hatch.build.targets.sdist]
# Ship source, the test suite (so distro packagers can run it against their environment) and
# project docs; never the multi-TB media fixtures or the data sandbox.
include = [
    "translate_subs",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "SECURITY.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C901"]

[tool.ruff.lint.mccabe]
# Complexity ceiling (ratchet): the worst offenders were split into pure steps to get under it.
# Lower it as further refactors land; never raise it to accommodate new code.
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# Typer relies on function-call defaults (Argument/Option), and the CLI deliberately
# raises typer.Exit after printing a friendly message (no exception chaining wanted).
"translate_subs/cli.py" = ["B008", "B904"]
"translate_subs/commands/*.py" = ["B008", "B904"]
# These fixtures embed real .ass content whose Style/Format header lines are inherently long.
"tests/test_complex_ass.py" = ["E501"]
"tests/test_linguistic_regression.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true                       # single source of truth: `mypy translate_subs/` is strict
ignore_missing_imports = true       # pysubs2/litellm ship no type stubs
warn_unused_ignores = true
exclude = ["tests/"]

[tool.pytest.ini_options]
# Warnings are errors: a DeprecationWarning from a dependency (or our own code) fails the suite
# instead of scrolling past, so upstream deprecations are caught before they become breakage.
# ResourceWarning is excluded: it fires from __del__ during garbage collection (e.g. an HTTPError
# built in the retry tests), so it surfaces non-deterministically at an unrelated test and reflects
# GC timing, not a code defect. Everything else still errors.
filterwarnings = ["error", "ignore::ResourceWarning"]
